# praatfan-core-clean

./: .gitignore  BUG-speech-reference-normalization.md  CLAUDE.md  DECISIONS-speech-reference-normalization.md  README.md  SPEC-speech-reference-normalization.md  USAGE.md  pyproject.toml
.github/workflows/: _dryrun_ghrelease.yml  release.yml  wheels.yml
docs/: API.md  RECIPE.md  RECIPE_formant_path.md  RESAMPLER_INVESTIGATION.md  RESOURCES.md  SELF-IMPROVEMENT.md  TRANSFERABLE_FINDINGS.md  index.html
docs/pkg/: package.json  praatfan.d.ts  praatfan.js  praatfan_bg.wasm  praatfan_bg.wasm.d.ts
reviews/: praatfan_gpl_batch_burg.md
rust/: Cargo.toml  pyproject.toml
rust/examples/: dump_f1.rs  dump_f1_json.rs  dump_f2.rs  dump_f3.rs  dump_f4.rs  dump_f5.rs  test_all.rs  test_formant.rs
rust/src/: error.rs  formant.rs  harmonicity.rs  intensity.rs  lib.rs  pitch.rs  python.rs  sound.rs  spectrogram.rs  spectrum.rs  speech_reference.rs  wasm.rs
rust/src/smallft/: dradb.rs  dradf.rs  fftwrap.rs  mod.rs  smallft.rs
scripts/: README.md  accuracy_histogram.py  baseline_burg_parity.csv  baseline_burg_parity.py  baseline_burg_parity_rust.py  boundary_hypotheses.py  check_frame_times.py  check_rust_python_resample_parity.py  check_smallft_fft.py  compare_all.py  compare_frame_by_frame.py  compare_intermediate.py  compare_wsinc_vs_scipy.py  debug_cc_fundamentals.py  debug_cc_offset.py  debug_cc_peaks.py  debug_sinc.py  debug_sinc_formulas.py  debug_sinc_tiny.py  decisive_resample_probe.py  decisive_resample_probe2.py  decisive_resample_probe3.py  decisive_resample_probe4.py  diag_bad_frame.py  dump_roots.py  error_percentiles.py  error_percentiles_all.py  explain_wsinc_failure.py  full_parity_baseline.py  kernel_hypotheses.py  resampler_regression_check.py  spectral_gap.py  test_bandwidth_formula.py  test_boundary_options.py  test_cc_algorithms.py  test_cc_at_expected_lag.py  test_cc_boundaries.py  test_cc_centered.py  test_cc_correlation.py  test_cc_details.py  (+32 more)
src/: pyproject.toml
src/praatfan/: __init__.py  compatibility.py  formant.py  harmonicity.py  intensity.py  pitch.py  praat.py  selector.py  sound.py  spectrogram.py  spectrum.py  speech_reference.py
src/praatfan_selector/: __init__.py  compatibility.py  selector.py
tests/: test_extract_part.py  test_formant_multi.py  test_pitch_thresholds.py  test_praat_compat.py  test_speech_reference.py
