[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "praatfan"
version = "0.1.1"
description = "Clean room reimplementation of Praat's acoustic analysis algorithms"
readme = "USAGE.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["audio", "speech", "acoustics", "formant", "pitch", "praat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "soundfile>=0.10",
]

[project.optional-dependencies]
# For development and testing against parselmouth
dev = [
    "praat-parselmouth",
    "matplotlib",
    "pytest",
]
# Alternative backends (install separately)
parselmouth = ["praat-parselmouth"]

[project.urls]
Homepage = "https://github.com/ucpresearch/praatfan-core-clean"
Repository = "https://github.com/ucpresearch/praatfan-core-clean"

[tool.setuptools.packages.find]
where = ["src"]
include = ["praatfan*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
