[package]
name = "praatfan_rust"
version = "0.1.9"
edition = "2021"
description = "Clean-room reimplementation of Praat's acoustic analysis algorithms"
license = "MIT OR Apache-2.0"
keywords = ["audio", "speech", "acoustics", "formant", "pitch"]
categories = ["multimedia::audio", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde", "serde-wasm-bindgen", "console_error_panic_hook", "hound"]
python = ["pyo3", "numpy"]

[dependencies]
# Array operations (numpy equivalent)
ndarray = "0.16"

# FFT
rustfft = "6.2"
num-complex = "0.4"

# Numeric traits
num-traits = "0.2"

# Audio file reading (WAV, MP3, OGG, FLAC)
symphonia = { version = "0.5", features = ["mp3", "ogg", "flac", "wav", "pcm", "aac"] }

# NIST SPHERE (incl. shorten-compressed) decoder, used only as a fallback when
# the primary loader cannot decode the bytes — symphonia on native (Sound::from_file)
# and hound on wasm (Sound::from_wav). Dependency-free core that compiles to
# wasm32 too, so it adds negligible weight and is statically linked (rlib) into
# both the Python extension and the WASM bundle.
#
# Pinned to a tag for reproducible CI builds. desphere is not on crates.io by
# design; its repo-root virtual workspace exposes the `desphere` crate from the
# rust/ subdirectory so this git dep resolves. For local iteration against an
# unreleased desphere, temporarily swap in: path = "../../desphere/rust".
desphere = { git = "https://github.com/ucpresearch/desphere", tag = "v0.1.0" }

# Error handling
thiserror = "2.0"

# Linear algebra (for eigenvalue computation). faer is the primary path —
# pure Rust, WASM-compatible, ~LAPACK precision. nalgebra retained as a
# fallback / for any DMatrix uses elsewhere.
faer = { version = "0.22", default-features = false, features = ["std", "linalg"] }
nalgebra = "0.33"

# WASM bindings (optional, enabled with "wasm" feature)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
hound = { version = "3.5", optional = true }

# Python bindings (optional, enabled with "python" feature)
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }
numpy = { version = "0.23", optional = true }

# Data parallelism (native only; wasm32 uses sequential fallback)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = true
opt-level = 3
