[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "praatfan_rust"
version = "0.1.0"
description = "Clean-room reimplementation of Praat's acoustic analysis algorithms"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords = ["audio", "speech", "acoustics", "formant", "pitch", "praat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "parselmouth>=0.4",
]

[project.urls]
Homepage = "https://github.com/your-org/praatfan-core-clean"

[tool.maturin]
features = ["python"]
module-name = "praatfan_rust"
